# solana-storage

./: .gitignore  Cargo.toml  README.md  config.yml  run.sh
client/: Cargo.toml
client/src/: client.rs  main.rs  utils.rs
program/: Cargo.toml
program/src/: lib.rs
ui/: Cargo.toml
ui/src/: lib.rs  main.rs
