[package]
name = "client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
borsh = { workspace = true }
clap = { workspace = true }
home = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
yaml-rust = { workspace = true }
