[package]
name = "program"
version = "0.1.0"
edition = "2021"

[features]
# https://docs.solana.com/developing/on-chain-programs/developing-rust#project-layout
#
# When toggled on this feature will cause the crate to not compile a
# bpf entrypoint.
#
# See the corresponding `#[cfg(not(feature = "exclude_entrypoint"))]`
# in lib.rs. This is needed so that other Solana programs can import
# helper functions from this library without causing symbol conflicts
# with our entrypoint.
exclude_entrypoint = []

[dependencies]
solana-program = { git = "https://github.com/solana-labs/solana.git", version = "1.16.2" }
borsh = "0.9"

[lib]
name = "storage"
crate-type = ["cdylib", "lib"]
