[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
chrono = { version = "0.4.31", features = ["serde"] }
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-tui = "0.4.0"
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
