[package]
name = "ui"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = { workspace = true }
async-recursion = { workspace = true }
async-std = { workspace = true }
chrono = { workspace = true }
dioxus = { workspace = true }
dioxus-tui = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
